Fix: cover/place horizontal scroll

--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -7,7 +7,7 @@
   line-height: 22px;
 }
   
-@media screen and (max-width: 570px) {
+@media screen and (max-width: 600px) {
   .cover__subtitle {
     padding-top: 16px;
     width: 288px;
