--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -8,7 +8,7 @@
   font-weight: 900;
 }
 
-@media screen and (max-width: 570px) {
+@media screen and (max-width: 600px) {
   .cover__title {
     width: 288px;
     font-size: 32px;
